<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="底部弹窗内容"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="金额"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="备注"
        android:minHeight="48dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:padding="8dp"
        android:rowCount="4"
        android:useDefaultMargins="true">

        <!-- 第一行 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/one"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"

            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/two"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"

            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/three"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:foreground="@drawable/btn_clean"
            android:scaleType="centerInside" />

        <!-- 第二行 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/four"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/five"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/six"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_rowSpan="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_sure_selector"
            android:text="@string/sure"
            android:textSize="20sp" />

        <!-- 第三行 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/seven"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/eight"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/nine"
            android:textSize="20sp" />

        <!-- 第四行 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/zero"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/point"
            android:textSize="20sp" />

    </GridLayout>


</LinearLayout>  